--- a/app/frontend/src/components/ClearChatButton/ClearChatButton.module.css
+++ b/app/frontend/src/components/ClearChatButton/ClearChatButton.module.css
@@ -5,3 +5,12 @@
     cursor: pointer;
     padding: 0.5rem;
 }
+
+.container button {
+    display: flex;
+    align-items: flex-end;
+}
+
+.container button span {
+    margin-right: 0.25rem;
+}
