--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -3,9 +3,11 @@
 }
 
 html {
-    background: #f2f2f2;
+    background: linear-gradient(180deg, #fff, #f2f2f2) fixed;
+    height: 100vh;
     font-size: 12px; /* Root font size for 320px width screens */
     font-family:
+        "Helvetica",
         "Segoe UI",
         -apple-system,
         BlinkMacSystemFont,
@@ -22,13 +24,16 @@ html {
 }
 
 body {
-    height: 100%;
     margin: 0;
     padding: 0;
 }
 
 #root {
     height: 100%;
+}
+
+textarea::placeholder {
+    color: #999999 !important;
 }
 
 @media (min-width: 480px) {
@@ -53,4 +58,14 @@ body {
     html {
         font-size: 16px; /* Standard size for desktops */
     }
+}
+
+@font-face {
+    font-family: "Helvetica";
+    src: url("./assets/fonts/Helvetica.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Helvetica-Bold";
+    src: url("./assets/fonts/Helvetica-Bold.ttf") format("truetype");
 }
