--- a/app/frontend/src/components/BottomInfoBar/BottomInfoBar.module.css
+++ b/app/frontend/src/components/BottomInfoBar/BottomInfoBar.module.css
@@ -3,6 +3,11 @@
     border-radius: 100px;
     background: #e6e6e6;
     color: #666666;
-    font-size: 0.75rem;
-    bottom: 2rem;
+    margin-bottom: 16px;
+    font-size: 1.1rem;
+}
+
+.container a {
+    color: #666666;
+    text-decoration: underline;
 }
