--- a/app/frontend/src/i18n/LanguagePicker.module.css
+++ b/app/frontend/src/i18n/LanguagePicker.module.css
@@ -1,15 +1,14 @@
 .languagePicker {
     word-break: break-word;
-    background: #dbdbdb;
+    background: #fff;
     border-radius: 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 0.3125rem;
-    padding-right: 0.3125rem;
     margin-bottom: 0.3125rem;
     cursor: pointer;
     width: fit-content;
+    padding: 0.25rem 0;
 }
 
 .languagePicker:hover {
@@ -22,4 +21,14 @@
 .languagePickerIcon {
     margin-bottom: 0.15625rem;
     margin-left: 0.125rem;
+}
+
+.languagePicker button {
+    background-color: transparent;
+    border: none;
+    color: #999999;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    gap: 0.25rem;
 }
